samples/_failures_safe/1761161819_7b48c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_914d1608.c: In function ‘main’:
./samples/SAFE/__tmp_914d1608.c:170:5: error: expected declaration or statement at end of input
  170 |     printf("Enter expression to tokenize: ");
      |     ^~~~~~
